--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                                 reduzir desafios e potencializar habilidades.
                             </p>
                         </div>
-                        <div class="mt-16 grid gap-8 md:grid-cols-2">
-                            <div class="space-y-6">
+                        <div id="social" class="mt-16 grid gap-8 md:grid-cols-3 text-center">
+                            <div class="flex flex-col items-center justify-center space-y-6">
                                 <div>
                                     <h3 class="text-xl font-semibold">Localização</h3>
                                     <address class="mt-3 not-italic text-primary-foreground/90">
@@ -294,34 +294,34 @@
                                         <p>Recife - PE</p>
                                     </address>
                                 </div>
-                                <div>
-                                    <h3 class="text-xl font-semibold">Informações de Contato</h3>
-                                    <div class="mt-3 space-y-2 text-primary-foreground/90">
-                                        <a>Email: </a><a href="mailto:dannilocarlos@gmail.com">dannilocarlos@gmail.com</a><br>
-                                        <a>Telefone: </a><a href="tel:5581981196750">(81) 98119-6750</a>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h3 class="text-xl font-semibold">Redes Sociais</h3>
-                                    <div class="mt-3 flex space-x-6"><a href="https://www.instagram.com/psidannilo/">
-                                            <div><i class="bi bi-instagram"></i></div>
-                                            <span class="sr-only">Instagram</span>
-
-                                            <div class="mt-3 flex space-x-6"></div><a
-                                                href="https://api.whatsapp.com/send?phone=5581981196750&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20a%20terapia%20ABA%20e%20como%20ela%20pode%20ajudar%20meu%20filho%20a%20desenvolver%20as%20habilidades%20sociais%20que%20est%C3%A3o%20em%20atraso!">
-                                                <div><i class="bi bi-whatsapp"></i></div>
-                                                <span class="sr-only">WhatsApp</span>
-
-                                                <div class="mt-3 flex space-x-6"></div><a
-                                                    href="https://www.linkedin.com/in/dannilocn/">
-                                                    <div><i class="bi bi-linkedin"></i></div>
-                                                    <span class="sr-only">LinkedIn</span>
-                                                </a>
-                                    </div>
+                            </div>
+                            <div class="flex flex-col items-center justify-center space-y-6">
+                                <h3 class="text-xl font-semibold">Informações de Contato</h3>
+                                <div class="mt-3 space-y-2 text-primary-foreground/90">
+                                    <a>Email: </a><a href="mailto:dannilocarlos@gmail.com">dannilocarlos@gmail.com</a><br>
+                                    <a>Telefone: </a><a href="tel:5581981196750">(81) 98119-6750</a>
                                 </div>
                             </div>
-                            <div class="rounded-lg bg-white p-6 shadow-lg">
-                                <form method="post" action="form.php" class="space-y-4">
+                            <div class="flex flex-col items-center justify-center space-y-6">
+                                <h3 class="text-xl font-semibold">Redes Sociais</h3>
+                                <div class="mt-3 flex space-x-6">
+                                    <a href="https://www.instagram.com/psidannilo/">
+                                        <div><i class="bi bi-instagram"></i></div>
+                                        <span class="sr-only">Instagram</span>
+                                    </a>
+                                    <a href="https://api.whatsapp.com/send?phone=5581981196750&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20a%20terapia%20ABA%20e%20como%20ela%20pode%20ajudar%20meu%20filho%20a%20desenvolver%20as%20habilidades%20sociais%20que%20est%C3%A3o%20em%20atraso!">
+                                        <div><i class="bi bi-whatsapp"></i></div>
+                                        <span class="sr-only">WhatsApp</span>
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/dannilocn/">
+                                        <div><i class="bi bi-linkedin"></i></div>
+                                        <span class="sr-only">LinkedIn</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                           <!--FORMULARIO <div class="rounded-lg bg-white p-6 shadow-lg">
+                                <form method="post" action="" class="space-y-4">
                                     <div class="grid gap-4 md:grid-cols-2">
                                         <div><label for="first-name"
                                                 class="block text-sm font-medium text-gray-700">Nome do responsável</label><input
@@ -341,7 +341,7 @@
                                             id="message" name="message" rows="4" style="height: 125px;"></textarea>
                                     </div><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-10 px-4 py-2 w-full bg-primary text-primary-foreground hover:bg-primary/90"
-                                        type="submit">Enviar Mensagem</button>
+                                        type="submit">Enviar Mensagem</button> -->
                                 </form>
                             </div>
                         </div>
@@ -349,19 +349,11 @@
                 </section>
             </div>
         </main>
-        <footer class="w-full border-t border-border/40 bg-primary text-primary-foreground">
+        <footer class="w-full border-border/40 bg-primary text-primary-foreground">
             <div class="container py-10">
                 <div class="grid grid-cols-1">
                     <div class="space-y-3">
-                        <h3 class="text-lg font-semibold">ABA, Applied Behavior Analysis ou Análise do Comportamento
-                            Aplicada</h3>
-                        <p class="text-sm text-primary-foreground/80">Se trata de uma abordagem científica que utiliza
-                            princípios da aprendizagem e do comportamento para desenvolver habilidades sociais,
-                            comunicativas e cognitivas, principalmente em crianças com
-                            autismo (TEA). Ela identifica como fatores ambientais influenciam comportamentos, aplicando
-                            técnicas personalizadas para reduzir ações desafiadoras e reforçar comportamentos positivos,
-                            sempre com metas claras e medição constante de resultados.
-                        </p>
+
                     </div>
                     <div
                         class="mt-8 border-t border-primary-foreground/20 pt-6 text-center text-sm text-primary-foreground/70">
