--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                                         <div><i class="bi bi-linkedin"></i></div>
                                         <span class="sr-only">LinkedIn</span>
                                     </a>
+                                    <a href="https://linktr.ee/DanniloC">
+                                        <div><i class="bi bi-link"></i></div>
+                                        <span class="sr-only">Linktree</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
