linktree icon changed

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                         <span class="sr-only">LinkedIn</span>
                                     </a>
                                     <a href="https://linktr.ee/DanniloC">
-                                        <div><i class="bi bi-link"></i></div>
+                                        <div><i class="bi bi-link-45deg"></i></div>
                                         <span class="sr-only">Linktree</span>
                                     </a>
                                 </div>
