--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -13,9 +14,41 @@
     <meta name="next-size-adjust" content="" />
     <title>Dannilo Carlos - Terapeuta ABA</title>
     <meta name="description" content="Bem-vindo(a) ao meu espaço dedicado à terapia ABA e psicologia!" />
-    <meta name="keywords"
-        content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
-    <script src="js/script.js"></script>
+    <meta name="keywords" content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
+
+    <!-- SEO -->
+<meta name="description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!">
+<meta name="author" content="Dannilo Carlos">
+<meta name="keywords" content="autismo, aba, comportamento psicologia, terapia"/>
+
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta property="og:url" content="https://dannilocarlos.vercel.app/" />
+<meta property="og:title" content="Dannilo Carlos - Terapeuta ABA" />
+<meta property="og:image" content="src\previa.png" />
+<meta property="og:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!" />
+<meta name="theme-color" content="#14281d">
+
+<meta property="business:contact_data:country_name" content="Brasil" />
+<meta property="business:contact_data:website" content="https://dannilocarlos.vercel.app/" />
+<meta property="business:contact_data:region" content="PE" />
+<meta property="business:contact_data:email" content="psidannilocarlos@gmail.com" />
+<meta property="business:contact_data:phone_number" content="5581981196750" />
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!"/>
+<meta name="twitter:title" content="Dannilo Carlos - Terapeuta ABA" />
+<meta name="twitter:image" content="src\previa.png" />
+
+<meta name="geo.placename" content="Recife-PE" />
+<meta name="geo.region" content="BR" />
+<meta name="description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!" />
+<link rel="canonical" href="https://dannilocarlos.vercel.app/" />
+
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="pt_BR" />
+<meta name="format-detection" content="telephone=no">
+<!-- SEO -->
+
 </head>
 
 <body class="__className_d65c78 bg-background text-foreground">
@@ -47,14 +80,14 @@
                                 class="inline-block rounded-lg bg-secondary/20 px-3 py-1 text-sm text-primary-foreground">
                                 Psicólogo em formação • Terapeuta ABA certificado</div>
                                 <p class="text-lg text-primary-foreground/90 md:text-xl">
-                                <h2><strong>"A ciência não espera – e seu filho também não pode
+                                <h2><strong>A ciência não espera – e seu filho também não pode
                                         esperar.</strong></h2><br>
                                 Crianças que iniciam o ABA nos primeiros anos têm até <strong>80% mais chances de
                                     reduzir o
                                     grau do autismo, segundo pesquisas.</strong> Não deixe o relógio biológico
                                 avançar sem agir.
                                 A ciência está do seu lado. Agende uma sessão e dê o primeiro passo hoje
-                                mesmo!"<br><br>
+                                mesmo!<br><br>
                                 </p>
                                 <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4"><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-11 rounded-md px-8 bg-secondary text-secondary-foreground hover:bg-secondary/90">
