--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta property="og:url" content="https://dannilocarlos.vercel.app/" />
 <meta property="og:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta property="og:image" content="src\previa.png" />
+<meta property="og:image" href="src\previa.png" />
 <meta property="og:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!" />
 <meta name="theme-color" content="#14281d">
 
@@ -37,7 +37,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!"/>
 <meta name="twitter:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta name="twitter:image" content="src\previa.png" />
+<meta name="twitter:image" href="src\previa.png" />
 
 <meta name="geo.placename" content="Recife-PE" />
 <meta name="geo.region" content="BR" />
