--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <meta name="keywords" content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
 
     <!-- SEO -->
-<meta name="description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!">
+<meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!">
 <meta name="author" content="Dannilo Carlos">
 <meta name="keywords" content="autismo, aba, comportamento psicologia, terapia"/>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta property="og:url" content="https://dannilocarlos.vercel.app/" />
 <meta property="og:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta property="og:image" href="src\previa.png" />
-<meta property="og:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!" />
+<meta property="og:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
+<meta property="og:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
 <meta name="theme-color" content="#14281d">
 
 <meta property="business:contact_data:country_name" content="Brasil" />
@@ -35,13 +35,13 @@
 <meta property="business:contact_data:phone_number" content="5581981196750" />
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!"/>
+<meta name="twitter:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!"/>
 <meta name="twitter:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta name="twitter:image" href="src\previa.png" />
+<meta name="twitter:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
 
 <meta name="geo.placename" content="Recife-PE" />
 <meta name="geo.region" content="BR" />
-<meta name="description" content="Crianças que iniciam o ABA nos primeiros anos têm até 80% mais chances de reduzir o grau do autismo, segundo pesquisas. Agende uma sessão e dê o primeiro passo hoje mesmo!" />
+<meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
 <link rel="canonical" href="https://dannilocarlos.vercel.app/" />
 
 <meta property="og:type" content="website" />
