--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
                                     </div>
                                 </div>
                                 <div class="p-6 pt-0">
-                                    <p class="text-muted-foreground">Suporte e treinamento para familiares, fornecendo
-                                        estratégias comportamentais para aplicar no dia a dia.</p>
+                                    <p class="text-muted-foreground">Motivar a criança com estratégias como reforço positivo e integrando sistemas alternativos de comunicação.</p>
                                 </div>
                             </div>
                             <div
