--- a/index.html
+++ b/index.html
@@ -14,40 +14,41 @@
     <meta name="next-size-adjust" content="" />
     <title>Dannilo Carlos - Terapeuta ABA</title>
     <meta name="description" content="Bem-vindo(a) ao meu espaço dedicado à terapia ABA e psicologia!" />
-    <meta name="keywords" content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
+    <meta name="keywords"
+        content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
 
     <!-- SEO -->
-<meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!">
-<meta name="author" content="Dannilo Carlos">
-<meta name="keywords" content="autismo, aba, comportamento psicologia, terapia"/>
+    <meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!">
+    <meta name="author" content="Dannilo Carlos">
+    <meta name="keywords" content="autismo, aba, comportamento psicologia, terapia" />
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta property="og:url" content="https://dannilocarlos.vercel.app/" />
-<meta property="og:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta property="og:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
-<meta property="og:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
-<meta name="theme-color" content="#14281d">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="og:url" content="https://dannilocarlos.vercel.app/" />
+    <meta property="og:title" content="Dannilo Carlos - Terapeuta ABA" />
+    <meta property="og:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
+    <meta property="og:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
+    <meta name="theme-color" content="#14281d">
 
-<meta property="business:contact_data:country_name" content="Brasil" />
-<meta property="business:contact_data:website" content="https://dannilocarlos.vercel.app/" />
-<meta property="business:contact_data:region" content="PE" />
-<meta property="business:contact_data:email" content="psidannilocarlos@gmail.com" />
-<meta property="business:contact_data:phone_number" content="5581981196750" />
+    <meta property="business:contact_data:country_name" content="Brasil" />
+    <meta property="business:contact_data:website" content="https://dannilocarlos.vercel.app/" />
+    <meta property="business:contact_data:region" content="PE" />
+    <meta property="business:contact_data:email" content="psidannilocarlos@gmail.com" />
+    <meta property="business:contact_data:phone_number" content="5581981196750" />
 
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!"/>
-<meta name="twitter:title" content="Dannilo Carlos - Terapeuta ABA" />
-<meta name="twitter:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
+    <meta name="twitter:title" content="Dannilo Carlos - Terapeuta ABA" />
+    <meta name="twitter:image" content="https://pbs.twimg.com/media/GnP_0YuXwAEdHAZ?format=png&name=240x240" />
 
-<meta name="geo.placename" content="Recife-PE" />
-<meta name="geo.region" content="BR" />
-<meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
-<link rel="canonical" href="https://dannilocarlos.vercel.app/" />
+    <meta name="geo.placename" content="Recife-PE" />
+    <meta name="geo.region" content="BR" />
+    <meta name="description" content="ABA precoce pode reduzir autismo em até 80%. Agende já!" />
+    <link rel="canonical" href="https://dannilocarlos.vercel.app/" />
 
-<meta property="og:type" content="website" />
-<meta property="og:locale" content="pt_BR" />
-<meta name="format-detection" content="telephone=no">
-<!-- SEO -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta name="format-detection" content="telephone=no">
+    <!-- SEO -->
 
 </head>
 
@@ -77,8 +78,8 @@
                                 <h1 class="text-4xl font-bold tracking-tight sm:text-5xl md:text-6xl">Dannilo Carlos
                                 </h1>
                                 <div
-                                class="inline-block rounded-lg bg-secondary/20 px-3 py-1 text-sm text-primary-foreground">
-                                Psicólogo em formação • Terapeuta ABA certificado</div>
+                                    class="inline-block rounded-lg bg-secondary/20 px-3 py-1 text-sm text-primary-foreground">
+                                    Psicólogo em formação • Terapeuta ABA certificado</div>
                                 <p class="text-lg text-primary-foreground/90 md:text-xl">
                                 <h2><strong>A ciência não espera – e seu filho também não pode
                                         esperar.</strong></h2><br>
@@ -89,12 +90,14 @@
                                 A ciência está do seu lado. Agende uma sessão e dê o primeiro passo hoje
                                 mesmo!<br><br>
                                 </p>
-                                <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4"><button
-                                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-11 rounded-md px-8 bg-secondary text-secondary-foreground hover:bg-secondary/90">
-                                        <a href="#contact">Agende sua sessão</a>
-                                    </button><button
-                                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-11 rounded-md px-8 border-secondary text-secondary bg-transparent hover:bg-secondary hover:text-primary"><a
-                                            href="#services">Saiba Mais</a></button></div>
+                                <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4">
+                                    <a href="#contact"><button
+                                            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-11 rounded-md px-8 bg-secondary text-secondary-foreground hover:bg-secondary/90">
+                                            Agende sua sessão</button></a>
+                                    <a href="#services"><button
+                                            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-11 rounded-md px-8 border-secondary text-secondary bg-transparent hover:bg-secondary hover:text-primary">
+                                            Saiba Mais</button></a>
+                                </div>
                             </div>
                             <div
                                 class="relative mx-auto aspect-square max-w-md overflow-hidden rounded-full border-8 border-secondary/20">
@@ -182,7 +185,8 @@
                                     </div>
                                 </div>
                                 <div class="p-6 pt-0">
-                                    <p class="text-muted-foreground">Motivar a criança com estratégias como reforço positivo e integrando sistemas alternativos de comunicação.</p>
+                                    <p class="text-muted-foreground">Motivar a criança com estratégias como reforço
+                                        positivo e integrando sistemas alternativos de comunicação.</p>
                                 </div>
                             </div>
                             <div
@@ -330,7 +334,8 @@
                             <div class="flex flex-col items-center justify-center space-y-6">
                                 <h3 class="text-xl font-semibold">Informações de Contato</h3>
                                 <div class="mt-3 space-y-2 text-primary-foreground/90">
-                                    <a>Email: </a><a href="mailto:dannilocarlos@gmail.com">dannilocarlos@gmail.com</a><br>
+                                    <a>Email: </a><a
+                                        href="mailto:dannilocarlos@gmail.com">dannilocarlos@gmail.com</a><br>
                                     <a>Telefone: </a><a href="tel:5581981196750">(81) 98119-6750</a>
                                 </div>
                             </div>
@@ -341,7 +346,8 @@
                                         <div><i class="bi bi-instagram"></i></div>
                                         <span class="sr-only">Instagram</span>
                                     </a>
-                                    <a href="https://api.whatsapp.com/send?phone=5581981196750&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20a%20terapia%20ABA%20e%20como%20ela%20pode%20ajudar%20meu%20filho%20a%20desenvolver%20as%20habilidades%20sociais%20que%20est%C3%A3o%20em%20atraso!">
+                                    <a
+                                        href="https://api.whatsapp.com/send?phone=5581981196750&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20a%20terapia%20ABA%20e%20como%20ela%20pode%20ajudar%20meu%20filho%20a%20desenvolver%20as%20habilidades%20sociais%20que%20est%C3%A3o%20em%20atraso!">
                                         <div><i class="bi bi-whatsapp"></i></div>
                                         <span class="sr-only">WhatsApp</span>
                                     </a>
@@ -356,7 +362,7 @@
                                 </div>
                             </div>
                         </div>
-                           <!--FORMULARIO <div class="rounded-lg bg-white p-6 shadow-lg">
+                        <!--FORMULARIO <div class="rounded-lg bg-white p-6 shadow-lg">
                                 <form method="post" action="" class="space-y-4">
                                     <div class="grid gap-4 md:grid-cols-2">
                                         <div><label for="first-name"
@@ -378,25 +384,25 @@
                                     </div><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-10 px-4 py-2 w-full bg-primary text-primary-foreground hover:bg-primary/90"
                                         type="submit">Enviar Mensagem</button> -->
-                                </form>
-                            </div>
-                        </div>
+                        </form>
                     </div>
-                </section>
             </div>
-        </main>
-        <footer class="w-full border-border/40 bg-primary text-primary-foreground">
-            <div class="container py-10">
-                <div class="grid grid-cols-1">
-                    <div class="space-y-3">
+    </div>
+    </section>
+    </div>
+    </main>
+    <footer class="w-full border-border/40 bg-primary text-primary-foreground">
+        <div class="container py-10">
+            <div class="grid grid-cols-1">
+                <div class="space-y-3">
 
-                    </div>
-                    <div
-                        class="mt-8 border-t border-primary-foreground/20 pt-6 text-center text-sm text-primary-foreground/70">
-                        <p>© <!-- -->2025<!-- --> Feito com carinho por mim mesmo 💛. Todos os direitos reservados.</p>
-                    </div>
                 </div>
-        </footer>
+                <div
+                    class="mt-8 border-t border-primary-foreground/20 pt-6 text-center text-sm text-primary-foreground/70">
+                    <p>© <!-- -->2025<!-- --> Feito com carinho por mim mesmo 💛. Todos os direitos reservados.</p>
+                </div>
+            </div>
+    </footer>
     </div>
 
     <script src="js/swiper-bundle.min.js"></script>
