--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                 <h3 class="text-xl font-semibold">Informações de Contato</h3>
                                 <div class="mt-3 space-y-2 text-primary-foreground/90">
                                     <a>Email: </a><a
-                                        href="mailto:dannilocarlos@gmail.com">dannilocarlos@gmail.com</a><br>
+                                        href="mailto:psidannilocarlos@gmail.com">psidannilocarlos@gmail.com</a><br>
                                     <a>Telefone: </a><a href="tel:5581981196750">(81) 98119-6750</a>
                                 </div>
                             </div>
