--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 <div>
                                     <h3 class="text-xl font-semibold">Localização</h3>
                                     <address class="mt-3 not-italic text-primary-foreground/90">
-                                        <p>Rua Carlos Marighella</p>
+                                        <p>Macaxeira</p>
                                         <p>Recife - PE</p>
                                     </address>
                                 </div>
